--- a/notebooks/analogy_evaluation.ipynb
+++ b/notebooks/analogy_evaluation.ipynb
@@ -211,7 +211,7 @@
     "                    indiv_subcategory_correctness.append(0)\n",
     "                    \n",
     "                    for candidate_word in most_similar_vec:\n",
-    "                        #canddiate_word is a tuple with the word and its cossim with 3CosAdd vector of input\n",
+    "                        #candidate_word is a tuple with the word and its cossim with 3CosAdd vector of input\n",
     "                        print(analogy,\" \",candidate_word)\n",
     "                        if (candidate_word[0] == analogy[3]) :\n",
     "                            #print(\"CORRECT\")\n",
